src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-ofT-dwF1000-dhP0.5-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen floating: true\ndefault column width: F1000\ndefault window height: P0.5\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 1000 × 360, bounds: 1280 × 720, states: []

post-map configures:
size: 1000 × 360, bounds: 1280 × 720, states: []
size: 1000 × 360, bounds: 1280 × 720, states: [Activated]
